syntax = "proto2";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message PodsResponse {
    optional bool should_start = 1;
}